--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 </head>
 <body>
-  
+  <header>
+    <a href="#">
+      <img src="assets/logo.svg" alt="logo">
+    </a>
+
+    <a href="#">
+      <img src="assets/icons/shopping-bag.svg" alt="ícone de sacola">
+      <span>1</span>
+    </a>    
+  </header>
 </body>
 </html>
