--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
       <span>1</span>
     </a>    
   </header>
+
+  <section id="hero">
+    <div>
+      <h1>Snitap, sua vida mais 
+        <div>
+          <span>radical</span>
+          <span>divertida</span>
+          <span>saudável</span>
+          <span>radical</span>
+        </div>
+      </h1>
+      <div class="buttons"></div>
+    </div>
+  </section>
 </body>
 </html>
