--- a/index.html
+++ b/index.html
@@ -58,5 +58,29 @@
       </div>
     </div>
   </section>
+
+  <section class="banner">
+    <div class="scroller
+    bg-gradient-animate">
+      <div class="rolling">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">
+        <img src="assets/images/banner.svg" alt="banner">        
+      </div>
+    </div>
+  </section>
 </body>
 </html>
