--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <header>
+  <header class="top">
     <a href="#">
       <img src="assets/logo.svg" alt="logo">
     </a>
@@ -24,7 +24,7 @@
     </a>    
   </header>
 
-  <section id="hero">
+  <section class="hero">
     <div>
       <h1>Snitap, sua vida mais 
         <div>
@@ -82,5 +82,47 @@
       </div>
     </div>
   </section>
+
+  <section class="gallery">
+    <header>
+      <span>GALERIA DE FOTOS</span>
+      <h2>#usesnitap por aí</h2>
+    </header>
+
+    <div class="content">
+      <figure>
+        <img src="assets/images/01.png" alt="" />
+        <figcaption>
+          <img src="assets/images/person.svg" alt="" />
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assets/images/02.png" alt="" />
+        <figcaption>
+          <img src="assets/images/person.svg" alt="" />
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="assets/images/03.png" alt="" />
+        <figcaption>
+          <img src="assets/images/person.svg" alt="" />
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assets/images/04.png" alt="" />
+        <figcaption>
+          <img src="assets/images/person.svg" alt="" />
+          <span>@laviniapereira</span>
+        </figcaption>
+      </figure>
+    </div>
+  </section>
+
 </body>
 </html>
