--- a/index.html
+++ b/index.html
@@ -124,5 +124,32 @@
     </div>
   </section>
 
+  <footer>
+    <div class="logo">
+      <img src="assets/logo.svg" alt="logo">
+      Snitap
+    </div>
+
+    <nav>
+      <a href="#">Sobre</a>
+      <a href="#">Nossas lojas</a>
+      <a href="#">Política de privacidade</a>
+    </nav>
+
+    <div class="social-links">
+      <a href="#" title="instagram">
+        <img src="assets/icons/instagram.svg" alt="instagram">
+      </a>
+      <a href="#" title="facebook">
+        <img src="assets/icons/facebook.svg" alt="facebook">
+      </a>
+      <a href="#" title="youtube">
+        <img src="assets/icons/youtube.svg" alt="youtube">
+      </a>
+      <a href="#" title="tiktok">
+        <img src="assets/icons/tiktok.svg" alt="tiktok">
+      </a>      
+    </div>
+  </footer>
 </body>
 </html>
